# SDL2-OpenGL-2D-Game

./: .gitignore  CMakeLists.txt
shaders/: fragment.glsl
src/: Shader.cpp  Shader.h  main.cpp
